fix com.android.builder.internal.aapt.v2.Aapt2Exception issue

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,17 +5,17 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -30,6 +30,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile(name: 'alipaySdk-15.5.9-20181123210601', ext: 'aar')
+    api 'com.facebook.react:react-native:+'
+    implementation(name: 'alipaySdk-15.5.9-20181123210601', ext: 'aar')
 }
