change way to inject alipay sdk

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,5 +35,5 @@ repositories {
 
 dependencies {
     api 'com.facebook.react:react-native:+'
-    implementation(name: 'alipaySdk-15.5.9-20181123210601', ext: 'aar')
+    implementation fileTree(dir: "libs", include: ["*.aar"])
 }
